fix y axis overflow

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
         scrollbar-width: thin;
         scrollbar-color: #9e9e9e transparent;
 
+        overflow: hidden;
     }
 
     html {
